<resources>
    <string name="app_name">StaffList</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_staff">Add staff</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="age">Age:</string>
    <string name="name">Name:</string>
    <string name="number">Number:</string>
    <string name="add">Add</string>
    <string name="gender">Gender:</string>
</resources>
